[gd_scene load_steps=6 format=3 uid="uid://bllf5bc4423sl"]

[ext_resource type="Script" uid="uid://ck2w36l2mfbm8" path="res://Scenes & Scripts/slam.gd" id="1_a23qu"]
[ext_resource type="AudioStream" uid="uid://co7irv8t8nrdy" path="res://Audio/SFX/jump.wav" id="2_oecog"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_oecog"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l027b"]
size = Vector2(7.6344, 12.7456)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fscrs"]
size = Vector2(8, 13)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_a23qu")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["attack", "slam"]]
position = Vector2(-2.38419e-07, -6.5)
scale = Vector2(8, 13)
texture = SubResource("PlaceholderTexture2D_oecog")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.0173721, -6.48345)
shape = SubResource("RectangleShape2D_l027b")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_oecog")
pitch_scale = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SlamTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="killbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_fscrs")

[connection signal="timeout" from="StartTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
